--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,9 @@ jobs:
         bash  build-prepare-run-container.sh
     - name: Build
       run: |
-        docker exec -i swoole-cli-build-dev php prepare.php +inotify +mongodb
+        # docker exec -i swoole-cli-build-dev php prepare.php +inotify +mongodb
+        docker exec -i swoole-cli-build-dev sh -c "SKIP_LIBRARY_DOWNLOAD=1 php prepare.php +mongodb +inotify"
+        # docker exec -i swoole-cli-build-dev sh ./make.sh all-library
         docker exec -i swoole-cli-build-dev sh ./make.sh config
         docker exec -i swoole-cli-build-dev sh ./make.sh build
         docker exec -i swoole-cli-build-dev sh ./bin/swoole-cli -v
