--- a/build-tools/Dockerfile-old
+++ b/build-tools/Dockerfile-old
@@ -8,7 +8,7 @@ RUN  \
 apk update && apk upgrade && \
 apk add --no-cache vim alpine-sdk xz autoconf automake linux-headers clang-dev clang lld libtool cmake && \
 apk add --no-cache  ca-certificates openssl openssl-dev curl tini
-RUN apk add --no-cache   gnu-libiconv-dev libsodium-dev  libpq-dev bison libxml2-dev  sqlite-dev curl-dev
+RUN apk add --no-cache   gnu-libiconv-dev libsodium-dev  libpq-dev bison libxml2-dev  sqlite-dev curl-dev  libxslt-dev
 RUN apk add --no-cache freetype \
       freetype-dev \
       jpeg \
