--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,18 +18,19 @@ jobs:
       run: |
         sudo apt install -y rsync git curl wget
         git submodule update --init
-        curl  https://get.docker.com | bash
-        bash  build-tools-script/prepare-base-container.sh
-        bash  build-tools-script/run-base-container.sh
-        docker exec -i swoole-cli-build-dev sh  ./build-tools-script/init-depend.sh
+#        curl  https://get.docker.com | bash
+#        bash  build-tools-script/prepare-base-container.sh
+#        bash  build-tools-script/run-base-container.sh
+#        docker exec -i swoole-cli-build-dev sh  ./build-tools-script/init-depend.sh
     - name: Build-with-docker-1
       uses: addnab/docker-run-action@v3
       with:
-        image: docker.io/jingjingxyk/build-swoole-cli:alpine-edge-20221207T123628Z
+        image: docker.io/jingjingxyk/build-swoole-cli:alpine-edge-20221207T125907Z
         options: -v ${{ github.workspace }}:/work
         run: |
           cd /work
-          ./make.sh all-library
+          sh ./build-tools-script/init-depend.sh
+          sh ./make.sh all-library
     - name: Cache-Thirdparty
       id:  cache-thirdparty
       uses: actions/cache@v3
