--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,46 +8,51 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Cache-Pool
-      id:  cache-pool
-      uses: actions/cache@v3
-      with:
-        path: pool
-        key: pool
-    - name: Cache-Thirdparty
-      id: cache-thirdparty
-      uses: actions/cache@v3
-      with:
-        path: thirdparty
-        key: thirdparty
+#    - name: Cache-Pool
+#      id:  cache-pool
+#      uses: actions/cache@v3
+#      with:
+#        path: pool
+#        key: pool
+#    - name: Cache-Thirdparty
+#      id: cache-thirdparty
+#      uses: actions/cache@v3
+#      with:
+#        path: thirdparty
+#        key: thirdparty
     - name: Configure
       run: |
         sudo apt install -y rsync git curl wget
         git submodule update --init
-#        curl  https://get.docker.com | bash
-#        bash  build-tools-scripts/prepare-base-container.sh
-#        bash  build-tools-scripts/run-base-container.sh
-#        docker exec -i swoole-cli-build-dev sh  ./build-tools-scripts/init-depend.sh
-    - name: Build-with-docker-1
-      uses: addnab/docker-run-action@v3
-      with:
-        image: docker.io/jingjingxyk/build-swoole-cli:alpine-edge-20221207T131304Z
-        options: -v ${{ github.workspace }}:/work
-        run: |
-          cd /work
-          sh ./build-tools-scripts/init-depend.sh
-          sh ./make.sh all-library
-
-    - name: Build-with-docker-2
-      uses: addnab/docker-run-action@v3
-      with:
-        image: docker.io/jingjingxyk/build-swoole-cli:alpine-edge-20221207T131304Z
-        options: -v ${{ github.workspace }}:/work
-        run: |
-          cd /work
-          ./make.sh config
-          ./make.sh build
-          ./bin/swoole-cli -v
+        curl  https://get.docker.com | bash
+        bash  build-tools-scripts/prepare-base-container.sh
+        bash  build-tools-scripts/run-base-container.sh
+        docker exec -i swoole-cli-build-dev sh  ./build-tools-scripts/init-depend.sh
+        docker exec -i swoole-cli-build-dev sh ./make.sh all-library
+        docker exec -i swoole-cli-build-dev sh ./make.sh config
+        docker exec -i swoole-cli-build-dev sh ./make.sh build
+        docker exec -i swoole-cli-build-dev sh ./bin/swoole-cli -v
+        docker exec -i swoole-cli-build-dev sh ./make.sh archive
+#    - name: Build-with-docker-1
+#      uses: addnab/docker-run-action@v3
+#      with:
+#        image: docker.io/jingjingxyk/build-swoole-cli:alpine-edge-20221207T131304Z
+#        options: -v ${{ github.workspace }}:/work
+#        run: |
+#          cd /work
+#          sh ./build-tools-scripts/init-depend.sh
+#          sh ./make.sh all-library
+#
+#    - name: Build-with-docker-2
+#      uses: addnab/docker-run-action@v3
+#      with:
+#        image: docker.io/jingjingxyk/build-swoole-cli:alpine-edge-20221207T131304Z
+#        options: -v ${{ github.workspace }}:/work
+#        run: |
+#          cd /work
+#          ./make.sh config
+#          ./make.sh build
+#          ./bin/swoole-cli -v
 #    - name: Build
 #      run: |
 #        docker exec -i swoole-cli-build-dev sh ./make.sh all-library
