--- a/.gitignore
+++ b/.gitignore
@@ -319,3 +319,4 @@ tmp-php.ini
 /build-tools-scripts/backup
 /build-tools-scripts/php-versions
 !/build-tools-scripts/php-versions/.gitkeep
+build-tools-scripts/dist/
