--- a/build-tools-scripts/Dockerfile-Dependencies
+++ b/build-tools-scripts/Dockerfile-Dependencies
@@ -17,7 +17,7 @@ ARG PROXY_URL=''
 
 ENV http_proxy=$PROXY_URL
 ENV https_proxy=$PROXY_URL
-
+RUN pear config-set http_proxy $PROXY_URL
 RUN git clone -b dev --depth=1 --progress  https://github.com/jingjingxyk/swoole-cli.git
 
 WORKDIR /swoole-cli
@@ -25,7 +25,7 @@ RUN sh build-tools-scripts/init-depend.sh
 
 ENV http_proxy=''
 ENV https_proxy=''
-
+RUN pear config-set http_proxy ""
 
 FROM alpine:edge
 
