--- a/build-tools-scripts/Dockerfile-Dependencies
+++ b/build-tools-scripts/Dockerfile-Dependencies
@@ -45,6 +45,8 @@ ENV LD=ld.lld
 #RUN mv /usr/bin/ld /usr/bin/ld.old && ln -s /usr/bin/ld.lld /usr/bin/ld
 
 
+WORKDIR /work
+
 RUN rm -rf /var/cache/apk/* /tmp/* /var/tmp/*
 RUN cp -f /etc/apk/repositories.save /etc/apk/repositories
 
@@ -81,11 +83,14 @@ COPY --from=1 /usr/libxml2/ /usr/libxml2/
 COPY --from=1 /usr/libxslt/ /usr/libxslt/
 COPY --from=1  /usr/gmp/ /usr/gmp/
 # COPY --from=1  /usr/bzip2 /usr/bzip2
+# COPY --from=1  /usr/zip /usr/zip
 COPY --from=1  /usr/liblzma/ /usr/liblzma/
 COPY --from=1  /usr/zstd/ /usr/zstd/
 COPY --from=1  /usr/sqlite3/ /usr/sqlite3/
 COPY --from=1  /usr/oniguruma/ /usr/brotli/
 COPY --from=1  /usr/curl/ /usr/curl/
-COPY --from=1  /usr/libsodium/ /usr/libyaml/
+COPY --from=1  /usr/libsodium/ /usr/libsodium/
+COPY --from=1  /usr/libyaml /usr/libyaml
 COPY --from=1  /usr/mimalloc/ /usr/mimalloc/
+# COPY --from=1  /usr/icu/ /usr/icu/
 # COPY --from=1  /usr/ /usr/
