--- a/build-tools-scripts/Dockerfile-Dependencies
+++ b/build-tools-scripts/Dockerfile-Dependencies
@@ -82,12 +82,13 @@ COPY --from=1 /usr/openssl/ /usr/openssl/
 COPY --from=1 /usr/libxml2/ /usr/libxml2/
 COPY --from=1 /usr/libxslt/ /usr/libxslt/
 COPY --from=1  /usr/gmp/ /usr/gmp/
-# COPY --from=1  /usr/bzip2 /usr/bzip2
+COPY --from=1  /usr/bzip2 /usr/bzip2
 # COPY --from=1  /usr/zip /usr/zip
 COPY --from=1  /usr/liblzma/ /usr/liblzma/
 COPY --from=1  /usr/zstd/ /usr/zstd/
 COPY --from=1  /usr/sqlite3/ /usr/sqlite3/
-COPY --from=1  /usr/oniguruma/ /usr/brotli/
+COPY --from=1  /usr/oniguruma/ /usr/oniguruma/
+COPY --from=1  /usr/brotli/ /usr/brotli/
 COPY --from=1  /usr/curl/ /usr/curl/
 COPY --from=1  /usr/libsodium/ /usr/libsodium/
 COPY --from=1  /usr/libyaml /usr/libyaml
