--- a/build-tools-scripts/Dockerfile-Dependencies
+++ b/build-tools-scripts/Dockerfile-Dependencies
@@ -1,6 +1,6 @@
 FROM alpine:edge
 
-RUN DEBIAN_FRONTEND=noninteractive
+
 ENV TZ=Etc/UTC
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
@@ -17,7 +17,7 @@ ARG PROXY_URL=''
 
 ENV http_proxy=$PROXY_URL
 ENV https_proxy=$PROXY_URL
-RUN pear config-set http_proxy $PROXY_URL
+
 RUN git clone -b dev --depth=1 --progress  https://github.com/jingjingxyk/swoole-cli.git
 
 WORKDIR /swoole-cli
@@ -25,7 +25,8 @@ RUN sh build-tools-scripts/init-depend.sh
 
 ENV http_proxy=''
 ENV https_proxy=''
-RUN pear config-set http_proxy ""
+# pear config-set http_proxy $PROXY_URL
+# RUN pear config-set http_proxy ""
 
 FROM alpine:edge
 
@@ -44,11 +45,6 @@ ENV CXX=clang++
 ENV LD=ld.lld
 #RUN mv /usr/bin/ld /usr/bin/ld.old && ln -s /usr/bin/ld.lld /usr/bin/ld
 
-
-WORKDIR /work
-
-RUN rm -rf /var/cache/apk/* /tmp/* /var/tmp/*
-RUN cp -f /etc/apk/repositories.save /etc/apk/repositories
 
 COPY --from=0 /swoole-cli /work
 WORKDIR /work
@@ -83,7 +79,7 @@ COPY --from=1 /usr/libxml2/ /usr/libxml2/
 COPY --from=1 /usr/libxslt/ /usr/libxslt/
 COPY --from=1  /usr/gmp/ /usr/gmp/
 COPY --from=1  /usr/bzip2 /usr/bzip2
-# COPY --from=1  /usr/zip /usr/zip
+
 COPY --from=1  /usr/liblzma/ /usr/liblzma/
 COPY --from=1  /usr/zstd/ /usr/zstd/
 COPY --from=1  /usr/sqlite3/ /usr/sqlite3/
@@ -95,3 +91,4 @@ COPY --from=1  /usr/libyaml /usr/libyaml
 COPY --from=1  /usr/mimalloc/ /usr/mimalloc/
 # COPY --from=1  /usr/icu/ /usr/icu/
 # COPY --from=1  /usr/ /usr/
+# COPY --from=1  /usr/zip /usr/zip
