--- a/build-tools-scripts/Dockerfile-alpine
+++ b/build-tools-scripts/Dockerfile-alpine
@@ -10,7 +10,7 @@ RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/g' /etc/apk/repositorie
 RUN apk update  && apk add curl wget git   tini ca-certificates openssl openssl-dev
 
 RUN apk add --no-cache php81-dev php81-cli php81-pear php81-curl php81-openssl &&  \
-pecl channel-update https://pecl.php.net/channel.xml && pear update-channels
+pecl channel-update https://pecl.php.net/channel.xml && pear update-channels && pecl config-show
 
 WORKDIR /work
 
