--- a/build-tools-scripts/Dockerfile-Dependencies
+++ b/build-tools-scripts/Dockerfile-Dependencies
@@ -85,8 +85,8 @@ COPY --from=1  /usr/gmp/ /usr/gmp/
 COPY --from=1  /usr/bzip2 /usr/bzip2
 COPY --from=1  /usr/zlib /usr/zlib
 
-COPY --from=1  /usr/liblzma/ /usr/liblzma/
-COPY --from=1  /usr/zstd/ /usr/zstd/
+# COPY --from=1  /usr/liblzma/ /usr/liblzma/
+# COPY --from=1  /usr/zstd/ /usr/zstd/
 COPY --from=1  /usr/sqlite3/ /usr/sqlite3/
 COPY --from=1  /usr/oniguruma/ /usr/oniguruma/
 COPY --from=1  /usr/brotli/ /usr/brotli/
