--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,14 +28,14 @@ jobs:
           sudo apt install -y rsync git curl wget
           git submodule update --init
           curl  https://get.docker.com | bash
-          bash  build-tools-scripts/run-download-lib-ext-container.sh
-          docker exec -i swoole-cli-build-dev-download-ext-libs sh  ./build-tools-scripts/init-depend.sh
-          bash  build-tools-scripts/prepare-build-container.sh
-          bash  build-tools-scripts/run-build-container.sh
-          docker exec -i swoole-cli-build-dev sh ./make.sh all-library
-          docker exec -i swoole-cli-build-dev sh ./make.sh config
-          docker exec -i swoole-cli-build-dev sh ./make.sh build
-          docker exec -i swoole-cli-build-dev sh ./build-tools-scripts/archive-dist.sh
+          bash  build-tools-scripts/run-swoole-cli-build-dev-1-container.sh
+          docker exec -i swoole-cli-build-dev-1 sh  ./build-tools-scripts/download-init-depend.sh
+          bash  build-tools-scripts/prepare-swoole-cli-build-dev-2-container.sh
+          bash  build-tools-scripts/run-swoole-cli-build-dev-2-container.sh
+          docker exec -i swoole-cli-build-dev-2 sh ./make.sh all-library
+          docker exec -i swoole-cli-build-dev-2 sh ./make.sh config
+          docker exec -i swoole-cli-build-dev-2 sh ./make.sh build
+          docker exec -i swoole-cli-build-dev-2 sh ./build-tools-scripts/archive-dist.sh
   #        docker exec -i swoole-cli-build-dev chmod a+x /work/bin/swoole-cli &&  /work/bin/swoole-cli -v
   #        docker exec -i swoole-cli-build-dev sh ./make.sh archive
   #    - name: Build-with-docker-1
