--- a/build-tools-scripts/Dockerfile-alpine-all-dependencies
+++ b/build-tools-scripts/Dockerfile-alpine-all-dependencies
@@ -105,7 +105,7 @@ COPY --from=1  /usr/mimalloc/ /usr/mimalloc/
 RUN apk add --no-cache icu icu-dev icu-libs icu-data-full icu-static
 RUN apk add --no-cache  ncurses-dev ncurses-libs ncurses-static
 RUN apk add --no-cache  readline readline-dev readline-static
-RUN apk --no-cache add postgresql-libs libpq-dev
+# RUN apk --no-cache add postgresql-libs libpq-dev
 
 
 RUN cp -f /etc/apk/repositories.save /etc/apk/repositories
