--- a/.gitignore
+++ b/.gitignore
@@ -318,6 +318,7 @@ tmp-php.ini
 /build-tools-scripts/php-versions
 /build-tools-scripts/swoole-cli-build-dev-1-container.txt
 /build-tools-scripts/swoole-cli-build-dev-2-container.txt
+build-tools-scripts/build-dev-dependencies-container.txt
 /build-tools-scripts/backup
 build-tools-scripts/dist/
 
