--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,7 @@ jobs:
           docker exec -i swoole-cli-build-dev-2 sh ./make.sh config
           docker exec -i swoole-cli-build-dev-2 sh ./make.sh build
           docker exec -i swoole-cli-build-dev-2 sh ./build-tools-scripts/archive-dist.sh
+          docker exec -i swoole-cli-build-dev-2 sh ./build-tools-scripts/download-php-sourcecode.sh
           docker exec -i swoole-cli-build-dev-2 sh ./build-tools-scripts/build-php-no-swoole-cli/build-config-php.sh
   #        docker exec -i swoole-cli-build-dev chmod a+x /work/bin/swoole-cli &&  /work/bin/swoole-cli -v
   #        docker exec -i swoole-cli-build-dev sh ./make.sh archive
