--- a/build-tools-scripts/Dockerfile-alpine-all-dependencies
+++ b/build-tools-scripts/Dockerfile-alpine-all-dependencies
@@ -81,11 +81,17 @@ COPY --from=1 /usr/openssl/ /usr/openssl/
 COPY --from=1 /usr/libxml2/ /usr/libxml2/
 COPY --from=1 /usr/libxslt/ /usr/libxslt/
 COPY --from=1  /usr/gmp/ /usr/gmp/
-COPY --from=1  /usr/bzip2 /usr/bzip2
 COPY --from=1  /usr/zlib /usr/zlib
+COPY --from=1  /usr/bzip2 /usr/bzip2
 
-# COPY --from=1  /usr/liblzma/ /usr/liblzma/
-# COPY --from=1  /usr/zstd/ /usr/zstd/
+COPY --from=1  /usr/liblzma/ /usr/liblzma/
+COPY --from=1  /usr/zstd/ /usr/zstd/
+
+COPY --from=1  /usr/giflib /usr/giflib
+COPY --from=1  /usr/libpng /usr/libpng
+COPY --from=1  /usr/libjpeg /usr/libjpeg
+COPY --from=1  /usr/freetype /usr/freetype
+COPY --from=1  /usr/libwebp /usr/libwebp
 
 COPY --from=1  /usr/sqlite3/ /usr/sqlite3/
 COPY --from=1  /usr/oniguruma/ /usr/oniguruma/
