--- a/build-tools-scripts/Dockerfile-alpine-all-dependencies
+++ b/build-tools-scripts/Dockerfile-alpine-all-dependencies
@@ -110,9 +110,9 @@ COPY --from=1  /usr/imagemagick /usr/imagemagick
 # COPY --from=1  /usr/zip /usr/zip
 
 
-RUN apk add --no-cache icu icu-dev icu-libs icu-data-full icu-static
-RUN apk add --no-cache  ncurses-dev ncurses-libs ncurses-static
-RUN apk add --no-cache  readline readline-dev readline-static
+# RUN apk add --no-cache icu icu-dev icu-libs icu-data-full icu-static
+# RUN apk add --no-cache  ncurses-dev ncurses-libs ncurses-static
+# RUN apk add --no-cache  readline readline-dev readline-static
 # RUN apk --no-cache add postgresql-libs libpq-dev
 
 
