--- a/build-tools-scripts/Dockerfile-alpine-all-dependencies
+++ b/build-tools-scripts/Dockerfile-alpine-all-dependencies
@@ -50,6 +50,11 @@ ENV CXX=clang++
 ENV LD=ld.lld
 #RUN mv /usr/bin/ld /usr/bin/ld.old && ln -s /usr/bin/ld.lld /usr/bin/ld
 
+RUN apk add --no-cache icu icu-dev icu-libs icu-data-full icu-static
+RUN apk add --no-cache  ncurses-dev ncurses-libs ncurses-static
+RUN apk add --no-cache  readline readline-dev readline-static
+RUN apk add --no-cache  apk add bzip2 bzip2-dev bzip2-static
+
 
 COPY --from=0 /swoole-cli /work
 WORKDIR /work
@@ -84,7 +89,7 @@ COPY --from=1 /usr/libxslt/ /usr/libxslt/
 COPY --from=1  /usr/gmp/ /usr/gmp/
 COPY --from=1  /usr/zlib /usr/zlib
 COPY --from=1  /usr/bzip2 /usr/bzip2
-
+COPY --from=1  /usr/zip /usr/zip
 
 COPY --from=1  /usr/giflib /usr/giflib
 COPY --from=1  /usr/libpng /usr/libpng
@@ -103,10 +108,10 @@ COPY --from=1  /usr/mimalloc/ /usr/mimalloc/
 
 COPY --from=1  /usr/imagemagick /usr/imagemagick
 
-# COPY --from=1  /usr/cares/ /usr/cares/
-# COPY --from=1  /usr/icu/ /usr/icu/
+COPY --from=1  /usr/cares/ /usr/cares/
+COPY --from=1  /usr/icu/ /usr/icu/
 # COPY --from=1  /usr/ /usr/
-# COPY --from=1  /usr/zip /usr/zip
+
 
 
 # 提供必要依赖，解决自定义安装，解决不了的问题
