--- a/build-tools-scripts/Dockerfile-alpine-all-dependencies
+++ b/build-tools-scripts/Dockerfile-alpine-all-dependencies
@@ -50,12 +50,15 @@ ENV CXX=clang++
 ENV LD=ld.lld
 #RUN mv /usr/bin/ld /usr/bin/ld.old && ln -s /usr/bin/ld.lld /usr/bin/ld
 
+
 RUN apk add --no-cache icu icu-dev icu-libs icu-data-full icu-static
 RUN apk add --no-cache  ncurses-dev ncurses-libs ncurses-static
 RUN apk add --no-cache  readline readline-dev readline-static
-RUN apk add --no-cache  apk add bzip2 bzip2-dev bzip2-static
-RUN apk add --no-cache  apk add zstd zstd-dev zstd-libs
-RUN apk add --no-cache  apk add xz xz-dev xz-libs
+RUN apk add --no-cache  bzip2 bzip2-dev bzip2-static
+RUN apk add --no-cache  zstd zstd-dev zstd-libs
+RUN apk add --no-cache  xz xz-dev xz-libs
+RUN apk add --no-cache  libidn2 libidn2-dev  libidn2-static
+RUN apk add --no-cache  nghttp2-dev nghttp2-libs nghttp2-static
 
 COPY --from=0 /swoole-cli /work
 WORKDIR /work
@@ -120,10 +123,11 @@ COPY --from=1  /usr/icu/ /usr/icu/
 RUN apk add --no-cache icu icu-dev icu-libs icu-data-full icu-static
 RUN apk add --no-cache  ncurses-dev ncurses-libs ncurses-static
 RUN apk add --no-cache  readline readline-dev readline-static
-RUN apk add --no-cache  apk add bzip2 bzip2-dev bzip2-static
-RUN apk add --no-cache  apk add zstd zstd-dev zstd-libs
-RUN apk add --no-cache  apk add xz xz-dev xz-libs
-
+RUN apk add --no-cache  bzip2 bzip2-dev bzip2-static
+RUN apk add --no-cache  zstd zstd-dev zstd-libs
+RUN apk add --no-cache  xz xz-dev xz-libs
+RUN apk add --no-cache  libidn2 libidn2-dev  libidn2-static
+RUN apk add --no-cache  nghttp2-dev nghttp2-libs nghttp2-static
 
 RUN cp -f /etc/apk/repositories.save /etc/apk/repositories
 
