--- a/build-tools-scripts/Dockerfile-alpine-all-dependencies
+++ b/build-tools-scripts/Dockerfile-alpine-all-dependencies
@@ -112,7 +112,7 @@ COPY --from=1  /usr/mimalloc/ /usr/mimalloc/
 
 COPY --from=1  /usr/imagemagick /usr/imagemagick
 
-COPY --from=1  /usr/cares/ /usr/cares/
+#COPY --from=1  /usr/cares/ /usr/cares/
 COPY --from=1  /usr/icu/ /usr/icu/
 # COPY --from=1  /usr/ /usr/
 
