新增构建配置文件

--- a/.gitignore
+++ b/.gitignore
@@ -311,3 +311,10 @@ tmp-php.ini
 /ext/swoole_tracker_agent
 /ext/loader8
 /ext/ds
+
+
+/build-tools-scripts/php-versions
+/build-tools-scripts/swoole-cli-build-dev-1-container.txt
+/build-tools-scripts/swoole-cli-build-dev-2-container.txt
+/build-tools-scripts/dist/
+/build-tools-scripts/build-php-no-swoole-cli/dist/
