--- a/build-tools-scripts/Dockerfile-alpine-all-dependencies
+++ b/build-tools-scripts/Dockerfile-alpine-all-dependencies
@@ -90,9 +90,14 @@ COPY --from=1 /usr/libiconv /usr/libiconv
 COPY --from=1 /usr/openssl/ /usr/openssl/
 COPY --from=1 /usr/libxml2/ /usr/libxml2/
 COPY --from=1 /usr/libxslt/ /usr/libxslt/
+
 COPY --from=1  /usr/gmp/ /usr/gmp/
+
 COPY --from=1  /usr/zlib /usr/zlib
 COPY --from=1  /usr/bzip2 /usr/bzip2
+COPY --from=1  /usr/liblzma /usr/liblzma
+COPY --from=1  /usr/libzstd /usr/libzstd
+
 COPY --from=1  /usr/zip /usr/zip
 
 COPY --from=1  /usr/giflib /usr/giflib
@@ -112,7 +117,7 @@ COPY --from=1  /usr/mimalloc/ /usr/mimalloc/
 
 COPY --from=1  /usr/imagemagick /usr/imagemagick
 
-#COPY --from=1  /usr/cares/ /usr/cares/
+# COPY --from=1  /usr/cares/ /usr/cares/
 COPY --from=1  /usr/icu/ /usr/icu/
 # COPY --from=1  /usr/ /usr/
 
