--- a/build-tools-scripts/Dockerfile-alpine-all-dependencies
+++ b/build-tools-scripts/Dockerfile-alpine-all-dependencies
@@ -90,9 +90,14 @@ COPY --from=1 /usr/libiconv /usr/libiconv
 COPY --from=1 /usr/openssl/ /usr/openssl/
 COPY --from=1 /usr/libxml2/ /usr/libxml2/
 COPY --from=1 /usr/libxslt/ /usr/libxslt/
+
 COPY --from=1  /usr/gmp/ /usr/gmp/
+
 COPY --from=1  /usr/zlib /usr/zlib
 COPY --from=1  /usr/bzip2 /usr/bzip2
+COPY --from=1  /usr/liblzma /usr/liblzma
+COPY --from=1  /usr/libzstd /usr/libzstd
+
 COPY --from=1  /usr/zip /usr/zip
 
 COPY --from=1  /usr/giflib /usr/giflib
@@ -112,7 +117,8 @@ COPY --from=1  /usr/mimalloc/ /usr/mimalloc/
 
 COPY --from=1  /usr/imagemagick /usr/imagemagick
 
-#COPY --from=1  /usr/cares/ /usr/cares/
+# COPY --from=1  /usr/cares/ /usr/cares/
+
 COPY --from=1  /usr/icu/ /usr/icu/
 # COPY --from=1  /usr/ /usr/
 
@@ -123,14 +129,9 @@ COPY --from=1  /usr/icu/ /usr/icu/
 RUN apk add --no-cache icu icu-dev icu-libs icu-data-full icu-static
 RUN apk add --no-cache  ncurses-dev ncurses-libs ncurses-static
 RUN apk add --no-cache  readline readline-dev readline-static
-RUN apk add --no-cache  bzip2 bzip2-dev bzip2-static
-RUN apk add --no-cache  zstd zstd-dev zstd-libs
-RUN apk add --no-cache  xz xz-dev xz-libs
-RUN apk add --no-cache  libidn2 libidn2-dev  libidn2-static
-RUN apk add --no-cache  nghttp2-dev nghttp2-libs nghttp2-static
+
 
 RUN cp -f /etc/apk/repositories.save /etc/apk/repositories
 
 RUN rm -rf /var/cache/apk/* /tmp/* /var/tmp/*
 
-RUN rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
