--- a/build-tools-scripts/Dockerfile-alpine-all-dependencies
+++ b/build-tools-scripts/Dockerfile-alpine-all-dependencies
@@ -126,9 +126,9 @@ COPY --from=1  /usr/icu/ /usr/icu/
 
 # 提供必要依赖，解决自定义安装，解决不了的问题
 
-RUN apk add --no-cache icu icu-dev icu-libs icu-data-full icu-static
-RUN apk add --no-cache  ncurses-dev ncurses-libs ncurses-static
-RUN apk add --no-cache  readline readline-dev readline-static
+# RUN apk add --no-cache icu icu-dev icu-libs icu-data-full icu-static
+# RUN apk add --no-cache  ncurses-dev ncurses-libs ncurses-static
+# RUN apk add --no-cache  readline readline-dev readline-static
 
 
 RUN cp -f /etc/apk/repositories.save /etc/apk/repositories
