--- a/.editorconfig
+++ b/.editorconfig
@@ -32,3 +32,13 @@ max_line_length          = 80
 
 [*.patch]
 trim_trailing_whitespace = false
+
+# Indentation override for all JS under lib directory
+[*.{js,json,ts,tsx}]
+indent_style = space
+indent_size = 2
+
+# Matches the exact files either package.json or .travis.yml
+[{package.json,.travis.yml}]
+indent_style = space
+indent_size = 2
