--- a/build-tools-scripts/Dockerfile-alpine-all-dependencies
+++ b/build-tools-scripts/Dockerfile-alpine-all-dependencies
@@ -9,8 +9,8 @@ RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/g' /etc/apk/repositorie
 
 RUN apk update  && apk add curl wget git   tini ca-certificates openssl openssl-dev
 
-RUN apk add --no-cache php81-dev php81-cli php81-pear php81-curl php81-openssl &&  \
-pecl channel-update https://pecl.php.net/channel.xml && pear update-channels
+RUN apk add --no-cache php81-dev php81-cli php81-pear php81-curl php81-openssl php81-phar php81-mbstring php81-xmlwriter php81-xml php81-simplexml php81-dom php81-intl &&  \
+pecl channel-update https://pecl.php.net/channel.xml && pear update-channels && pecl config-show
 
 WORKDIR /
 ARG PROXY_URL=''
@@ -51,14 +51,9 @@ ENV LD=ld.lld
 #RUN mv /usr/bin/ld /usr/bin/ld.old && ln -s /usr/bin/ld.lld /usr/bin/ld
 
 
-RUN apk add --no-cache icu icu-dev icu-libs icu-data-full icu-static
 RUN apk add --no-cache  ncurses-dev ncurses-libs ncurses-static
 RUN apk add --no-cache  readline readline-dev readline-static
-RUN apk add --no-cache  bzip2 bzip2-dev bzip2-static
-RUN apk add --no-cache  zstd zstd-dev zstd-libs
-RUN apk add --no-cache  xz xz-dev xz-libs
-RUN apk add --no-cache  libidn2 libidn2-dev  libidn2-static
-RUN apk add --no-cache  nghttp2-dev nghttp2-libs nghttp2-static
+RUN apk add --no-cache   c-ares c-ares-dev
 
 COPY --from=0 /swoole-cli /work
 WORKDIR /work
@@ -88,6 +83,7 @@ WORKDIR /work
 
 COPY --from=1 /usr/libiconv /usr/libiconv
 COPY --from=1 /usr/openssl/ /usr/openssl/
+COPY --from=1  /usr/brotli/ /usr/brotli/
 COPY --from=1 /usr/libxml2/ /usr/libxml2/
 COPY --from=1 /usr/libxslt/ /usr/libxslt/
 
@@ -108,7 +104,7 @@ COPY --from=1  /usr/libwebp /usr/libwebp
 
 COPY --from=1  /usr/sqlite3/ /usr/sqlite3/
 COPY --from=1  /usr/oniguruma/ /usr/oniguruma/
-COPY --from=1  /usr/brotli/ /usr/brotli/
+
 COPY --from=1  /usr/curl/ /usr/curl/
 
 COPY --from=1  /usr/libsodium/ /usr/libsodium/
@@ -116,6 +112,9 @@ COPY --from=1  /usr/libyaml /usr/libyaml
 COPY --from=1  /usr/mimalloc/ /usr/mimalloc/
 
 COPY --from=1  /usr/imagemagick /usr/imagemagick
+
+# COPY --from=1  /usr/ncurses /usr/ncurses
+# COPY --from=1  /usr/readline /usr/readline
 
 # COPY --from=1  /usr/cares/ /usr/cares/
 
@@ -126,9 +125,9 @@ COPY --from=1  /usr/icu/ /usr/icu/
 
 # 提供必要依赖，解决自定义安装，解决不了的问题
 
-# RUN apk add --no-cache icu icu-dev icu-libs icu-data-full icu-static
-# RUN apk add --no-cache  ncurses-dev ncurses-libs ncurses-static
-# RUN apk add --no-cache  readline readline-dev readline-static
+RUN apk add --no-cache  ncurses-dev ncurses-libs ncurses-static
+RUN apk add --no-cache  readline readline-dev readline-static
+RUN apk add --no-cache   c-ares c-ares-dev
 
 
 RUN cp -f /etc/apk/repositories.save /etc/apk/repositories
