--- a/build-tools-scripts/Dockerfile-alpine-dev-1
+++ b/build-tools-scripts/Dockerfile-alpine-dev-1
@@ -9,9 +9,11 @@ RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/g' /etc/apk/repositorie
 
 RUN apk update  && apk add curl wget git   tini ca-certificates openssl openssl-dev
 
-RUN apk add --no-cache php81-dev php81-cli php81-pear php81-curl php81-openssl &&  \
+RUN apk add --no-cache php81-dev php81-cli php81-pear php81-curl php81-openssl php81-phar php81-mbstring php81-xmlwriter php81-xml php81-simplexml php81-dom php81-intl &&  \
 pecl channel-update https://pecl.php.net/channel.xml && pear update-channels && pecl config-show
 
+RUN curl -Lo /usr/local/composer.phar https://mirrors.aliyun.com/composer/composer.phar && chmod a+x /usr/local/composer.phar
+RUN ln -s /usr/local/composer.phar /usr/bin/composer
 WORKDIR /work
 
 RUN rm -rf /var/cache/apk/* /tmp/* /var/tmp/*
