--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "type": "project",
   "autoload": {
     "psr-4": {
-      "Swoole\\SwooleCli\\": "src/"
+      "Swoole\\SwooleCli\\": ["sapi/","conf.d/"]
     }
   },
   "authors": [
@@ -12,10 +12,10 @@
     }
   ],
   "require": {
-    "friendsofphp/php-cs-fixer": "^3.13"
+    "friendsofphp/php-cs-fixer": "^3.13.1"
   },
   "require-dev": {
-    "phpstan/phpstan": "^1.9",
+    "phpstan/phpstan": "^1.9.4",
     "squizlabs/php_codesniffer": "*"
   },
   "minimum-stability": "dev",
@@ -30,6 +30,7 @@
     "php-cs-fixer": "php vendor/bin/php-cs-fixer  fix conf.d,sapi --rules=@PSR12 --show-progress",
     "phpcs": "php vendor/bin/phpcs --standard=PSR12 sapi/make.php",
     "phpcbf": "php vendor/bin/phpcbf --standard=PSR12 sapi/make.php",
+    "phpunit": "php ./vendor/bin/phpunit --version",
     "fmt": "sh build-tools-scripts/format-code.sh"
   }
 }
