--- a/build-tools-scripts/Dockerfile-alpine-all-dependencies
+++ b/build-tools-scripts/Dockerfile-alpine-all-dependencies
@@ -111,7 +111,7 @@ COPY --from=1  /usr/freetype /usr/freetype
 COPY --from=1  /usr/libwebp /usr/libwebp
 
 COPY --from=1  /usr/sqlite3/ /usr/sqlite3/
-COPY --from=1  /usr/oniguruma/ /usr/oniguruma/
+# COPY --from=1  /usr/oniguruma/ /usr/oniguruma/
 
 COPY --from=1  /usr/curl/ /usr/curl/
 
@@ -119,7 +119,7 @@ COPY --from=1  /usr/libsodium/ /usr/libsodium/
 COPY --from=1  /usr/libyaml /usr/libyaml
 COPY --from=1  /usr/mimalloc/ /usr/mimalloc/
 
-COPY --from=1  /usr/imagemagick /usr/imagemagick
+#COPY --from=1  /usr/imagemagick /usr/imagemagick
 
 # COPY --from=1  /usr/ncurses /usr/ncurses
 # COPY --from=1  /usr/readline /usr/readline
@@ -136,8 +136,8 @@ RUN apk add --no-cache  readline readline-dev readline-static
 RUN apk add --no-cache  c-ares c-ares-dev c-ares-utils
 
 # meson 和ninja 构建
-RUN apk add python3 python3-dev py3-pip ninja
-RUN pip3 install meson  -i https://pypi.tuna.tsinghua.edu.cn/simple
+# RUN apk add --no-cache  python3  py3-pip ninja
+# RUN pip3 install meson  -i https://pypi.tuna.tsinghua.edu.cn/simple
 
 
 RUN cp -f /etc/apk/repositories.save /etc/apk/repositories
