--- a/build-tools-scripts/Dockerfile-alpine-all-dependencies
+++ b/build-tools-scripts/Dockerfile-alpine-all-dependencies
@@ -57,7 +57,7 @@ ENV LD=ld.lld
 RUN apk add --no-cache icu icu-dev icu-libs icu-data-full icu-static
 RUN apk add --no-cache  ncurses-dev ncurses-libs ncurses-static
 RUN apk add --no-cache  readline readline-dev readline-static
-RUN apk add --no-cache  c-ares c-ares-dev c-ares-utils
+# RUN apk add --no-cache  c-ares c-ares-dev c-ares-utils
 
 # meson 和ninja 构建
 RUN apk add python3 python3-dev py3-pip ninja
@@ -133,7 +133,7 @@ COPY --from=1  /usr/imagemagick /usr/imagemagick
 RUN apk add --no-cache icu icu-dev icu-libs icu-data-full icu-static
 RUN apk add --no-cache  ncurses-dev ncurses-libs ncurses-static
 RUN apk add --no-cache  readline readline-dev readline-static
-RUN apk add --no-cache  c-ares c-ares-dev c-ares-utils
+# RUN apk add --no-cache  c-ares c-ares-dev c-ares-utils
 
 # meson 和ninja 构建
 # RUN apk add --no-cache  python3  py3-pip ninja
